Refactor: Implement single-role user model and update authentication flow
- Updated User entity to use a single Role (ManyToOne) instead of multiple roles (ManyToMany)
- Updated Role entity to include OneToMany relationship with User
- Updated AuthController to return JWT token along with full user details
- Updated AuthResponse to include user information (id, email, name, nickname, role)
- Updated AuthenticationService to handle single-role assignment and added findByEmail method
- Updated JwtService to store and extract a single "role" claim
- Updated CustomUserDetails to use single-role authority
- Updated UserServiceImpl and DTOs (UserRequest, UserUpdateRequest, UserResponse) to support single role
- Fixed UserRepository queries to use single role relationship
- Added RoleController, RoleService, and RoleServiceImpl with restricted access to SUPER_ADMIN
- Cleaned database and removed old join table for roles
- Verified SUPER_ADMIN role-based access control